


=== Modifica nome

Se utilizzi le credenziali cloud di NetApp per accedere a BlueXP, puoi modificare il tuo nome in *Impostazioni utente*.

image:screenshot-edit-name.png["Schermata che mostra la possibilità di modificare il nome in Impostazioni utente."]

La modifica del nome non è supportata se si effettua l'accesso con una connessione federata o con l'account del sito di supporto NetApp.



== 11 gennaio 2024



=== Connettore 3.9.36

Questa release include miglioramenti minori, correzioni di bug e supporto per il connettore nelle seguenti aree cloud:

* La regione di Israele (Tel Aviv) in AWS
* L'Arabia Saudita in Google Cloud




== 5 dicembre 2023



=== Rilascio in modalità privata

Una nuova release in modalità privata è ora disponibile per BlueXP. Questa release include la versione 3.9.35 del connettore e le versioni dei servizi BlueXP che sono supportate dalla modalità privata a ottobre 2023.

Questa nuova versione è disponibile per il download dal sito del supporto NetApp.

* https://docs.netapp.com/us-en/bluexp-setup-admin/concept-modes.html#private-mode["Scopri di più sui servizi BlueXP inclusi nella modalità privata"]
* https://docs.netapp.com/us-en/bluexp-setup-admin/task-quick-start-private-mode.html["Scopri come iniziare a utilizzare BlueXP in modalità privata"]
* https://docs.netapp.com/us-en/bluexp-setup-admin/task-managing-connectors.html#upgrade-the-connector-when-using-private-mode["Informazioni su come aggiornare il connettore quando si utilizza la modalità privata"]




== 8 novembre 2023



=== Connettore 3.9.35

Questa versione contiene piccoli miglioramenti alla sicurezza e correzioni di bug.



== 6 ottobre 2023



=== Connettore 3.9.34

Questa versione contiene piccoli miglioramenti e correzioni di bug.



== 10 settembre 2023



=== Connettore 3.9.33

* Quando crei un connettore in AWS da BlueXP, puoi cercare nel campo Coppia di chiavi per trovare più facilmente la coppia di chiavi da utilizzare con l'istanza del connettore.
+